# pose_selection

./: CMakeLists.txt  README.md  package.xml
data/example1/: pose_hypotheses.txt
data/example2/: pose_hypotheses.txt
data/example3/: pose_hypotheses.txt
include/: range_likelihood.h
src/: camera.cpp  model.cpp  pose_selection.cpp  range_likelihood.cpp  simulation_io.cpp  sum_reduce.cpp
